# moonfire-nvr

./: .dockerignore  .eslintrc.json  .gitignore  .jsbeautifyrc  .prettierrc.json  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.txt  README.md  build.rs  moonfire.sublime-project  moonfire.sublime-workspace  package.json  prep.sh  release.bash  settings-nvr.js  webpack.config.js
.cargo/: config  config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check-license.py  ci.yml  release.yml
base/: Cargo.toml  clock.rs  error.rs  lib.rs  strutil.rs  time.rs
ci/: install-ffmpeg.sh  script-rust.sh
db/: Cargo.toml  auth.rs  build.rs  check.rs  coding.rs  compare.rs  db.rs  dir.rs  fs.rs  lib.rs  raw.rs  recording.rs  schema.proto  schema.rs  schema.sql  signal.rs  testutil.rs  writer.rs
db/proto/: schema.proto
db/testdata/: avc1
db/upgrade/: mod.rs  v0.sql  v0_to_v1.rs  v1.sql  v1_to_v2.rs  v2_to_v3.rs  v3_to_v4.rs  v4_to_v5.rs  v5.sql  v5_to_v6.rs
debian/: changelog  control  copyright  moonfire-nvr.postinst  moonfire-nvr.service  rules
design/: README.md  api.md  glossary.md  schema.md  signal.md  time.md
docker/: Dockerfile  build-server.bash  build-ui.bash  deploy.bash  dev-common.bash  dev.bash
ffmpeg/: Cargo.toml  build.rs  lib.rs  wrapper.c
guide/: README.md  build.md  developing-ui.md  easy-install.md  easy_install.md  install-manual.md  install-scripted.md  install.md  schema.md  secure.md  simple-set-up-pi-3.md  troubleshooting.md
guide/examples/: haproxy-moonfire-tls-client.conf
misc/: moonfire_log.json
ref/: README.md  api.md  config.md
scripts/: build.sh  clean.sh  install.sh  script-functions.sh  setup-ubuntu.sh  webpack.sh
server/: Cargo.toml  Cross.toml  build.rs
server/.cargo/: config.toml
server/base/: Cargo.toml  clock.rs  error.rs  lib.rs  shutdown.rs  strutil.rs  time.rs  tracing_setup.rs
server/db/: Cargo.toml  auth.rs  build.rs  check.rs  coding.rs  compare.rs  days.rs  db.rs  dir.rs  fs.rs  json.rs  lib.rs  lifecycle.rs  raw.rs  recording.rs  sample_entries.rs  schema.sql  signal.rs  testutil.rs  writer.rs
server/db/dir/: mod.rs  reader.rs  scan.rs  writer.rs
server/db/proto/: schema.proto
server/db/stream/: mod.rs  recent_frames.rs
server/db/upgrade/: mod.rs  v0.sql  v0_to_v1.rs  v1.sql  v1_to_v2.rs  v2_to_v3.rs  v3.sql  v3_to_v4.rs  v4_to_v5.rs  v5.sql  v5_to_v6.rs  v6.sql  v6_to_v7.rs
server/src/: analytics.rs  body.rs  bundled_ui.rs  h264.rs  json.rs  main.rs  mp4.rs  slices.rs  stream.rs  streamer.rs  web.rs
server/src/cmds/: check.rs  init.rs  login.rs  mod.rs  run.rs  sql.rs  ts.rs
server/src/cmds/config/: cameras.rs  dirs.rs  mod.rs  tab_complete.rs  users.rs
server/src/cmds/run/: config.rs  mod.rs
server/src/cmds/upgrade/: mod.rs
server/src/web/: accept.rs  cameras.rs  live.rs  mod.rs  path.rs  session.rs  signals.rs  static_file.rs  storage.rs  users.rs  view.rs  websocket.rs
src/: CMakeLists.txt  analytics.rs  body.rs  check.rs  clock.rs  coding-test.cc  coding.cc  coding.h  common.h  config.protodevel  crypto-test.cc  crypto.cc  crypto.h  db.rs  dir.rs  error.rs  ffmpeg-test.cc  ffmpeg.cc  ffmpeg.h  filesystem.cc  filesystem.h  h264-test.cc  h264.cc  h264.h  h264.rs  http-test.cc  http.cc  http.h  json.rs  main.rs  mmapfile.rs  moonfire-db-test.cc  moonfire-db.cc  moonfire-db.h  moonfire-nvr-main.cc  moonfire-nvr-test.cc  moonfire-nvr.cc  moonfire-nvr.h  mp4-test.cc  mp4.cc  (+33 more)
src/cmds/: check.rs  init.rs  login.rs  mod.rs  run.rs  sql.rs  ts.rs
src/cmds/config/: cameras.rs  dirs.rs  mod.rs  retention.rs  users.rs
src/cmds/upgrade/: mod.rs  v0_to_v1.rs  v1_to_v2.rs  v2_to_v3.rs
src/upgrade/: mod.rs  v0_to_v1.rs
ui/: .eslintrc.json  .gitignore  .prettierignore  FixJSDomEnvironment.ts  README.md  eslint.config.js  index.html  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
ui-src/: NVRApplication.js  index.html  index.js
ui-src/assets/: index.css  index.html
ui-src/lib/: MoonfireAPI.js
ui-src/lib/models/: CalendarTSRange.js  Camera.js  JsonWrapper.js  Range.js  Range90k.js  Recording.js  Stream.js
ui-src/lib/support/: RecordingFormatter.js  Time90kParser.js  TimeFormatter.js  TimeStamp90kFormatter.js  URLBuilder.js
ui-src/lib/views/: CalendarView.js  CameraView.js  CheckboxGroupView.js  DatePickerView.js  NVRSettingsView.js  RecordingsView.js  StreamSelectorView.js  StreamView.js  VideoDialogView.js
ui/public/: index.html  site.webmanifest
ui/src/: App.test.tsx  App.tsx  AppMenu.tsx  ChangePassword.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  Login.test.tsx  Login.tsx  NVRApplication.js  NewPassword.tsx  api.ts  aspect.ts  index.css  index.html  index.tsx  mui.d.ts  react-app-env.d.ts  setupProxy.js  setupTests.ts  snackbars.test.tsx  snackbars.tsx  testutil.tsx  types.ts
ui/src/List/: DisplaySelector.tsx  StreamMultiSelector.tsx  TimerangeSelector.tsx  VideoList.test.tsx  VideoList.tsx  index.tsx
ui/src/Live/: LiveCamera.tsx  Multiview.tsx  index.tsx  parser.ts
ui/src/Users/: AddEditDialog.tsx  DeleteDialog.tsx  index.tsx
ui/src/components/: Header.tsx  ThemeMode.tsx
ui/src/lib/: MoonfireAPI.js
ui/src/lib/models/: CalendarTSRange.js  Range.js  Range90k.js  Stream.js
ui/src/lib/support/: RecordingFormatter.js  Time90kParser.js  TimeFormatter.js  URLBuilder.js
ui/src/lib/views/: CalendarView.js  DatePickerView.js  StreamSelectorView.js
ui/webpack/: base.config.js  prod.config.js
webpack/: NVRSettings.js  base.config.js  dev.config.js  prod.config.js
webpack/parts/: Settings.js
