[package]
name = "moonfire-base"
version = "0.0.1"
authors = ["Scott Lamb <slamb@slamb.org>"]
readme = "../README.md"
edition = "2018"

[features]
nightly = []

[lib]
path = "lib.rs"

[dependencies]
failure = "0.1.1"
lazy_static = "1.0"
libc = "0.2"
log = "0.4"
parking_lot = { version = "0.9", features = [] }
regex = "1.0"
time = "0.1"
