[package]
name = "moonfire-db"
version = "0.0.1"
authors = ["Scott Lamb <slamb@slamb.org>"]
readme = "../README.md"
edition = "2018"

[features]
nightly = []

[lib]
path = "lib.rs"

[dependencies]
base = { package = "moonfire-base", path = "../base" }
base64 = "0.11.0"
blake3 = "0.2.2"
byteorder = "1.0"
cstr = "0.1.7"
failure = "0.1.1"
fnv = "1.0"
h264-reader = { git = "https://github.com/dholroyd/h264-reader" }
lazy_static = "1.0"
libc = "0.2"
libpasta = "0.1.0-rc2"
log = "0.4"
lru-cache = "0.1"
mylog = { git = "https://github.com/scottlamb/mylog" }
nix = "0.16.1"
odds = { version = "0.3.1", features = ["std-vec"] }
parking_lot = { version = "0.9", features = [] }
prettydiff = "0.3.1"
protobuf = { git = "https://github.com/stepancheg/rust-protobuf" }
ring = "0.14.6"
rusqlite = "0.21.0"
smallvec = "1.0"
tempdir = "0.3"
time = "0.1"
uuid = { version = "0.8", features = ["std", "v4"] }
itertools = "0.8.0"

[build-dependencies]
protobuf-codegen-pure = { git = "https://github.com/stepancheg/rust-protobuf" }
