[package]
name = "moonfire-db"
version = "0.0.1"
authors = ["Scott Lamb <slamb@slamb.org>"]
readme = "../README.md"
edition = "2018"

[features]
nightly = []

[lib]
path = "lib.rs"

[dependencies]
base = { package = "moonfire-base", path = "../base" }
base64 = "0.11.0"
blake2-rfc = "0.2.18"
cstr = "0.1.7"
failure = "0.1.1"
fnv = "1.0"
hashlink = "0.6.0"
lazy_static = "1.0"
libc = "0.2"
libpasta = "0.1.0-rc2"
log = "0.4"
mylog = { git = "https://github.com/scottlamb/mylog" }
nix = "0.17.0"
odds = { version = "0.4.0", features = ["std-vec"] }
openssl = "0.10"
parking_lot = { version = "0.10", features = [] }
prettydiff = "0.3.1"
protobuf = { git = "https://github.com/stepancheg/rust-protobuf" }
rusqlite = "0.24.1"
smallvec = "1.0"
tempdir = "0.3"
time = "0.1"
uuid = { version = "0.8", features = ["std", "v4"] }
itertools = "0.9.0"

[build-dependencies]
protobuf-codegen-pure = { git = "https://github.com/stepancheg/rust-protobuf" }
