[package]
name = "moonfire-ffmpeg"
version = "0.0.1"
authors = ["Scott Lamb <slamb@slamb.org>"]
readme = "../README.md"
#links = "ffmpeg"

[lib]
path = "lib.rs"

[dependencies]
libc = "0.2"
log = { version = "0.3", features = ["release_max_level_info"] }

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
