[package]
name = "moonfire-db"
version = "0.7.6"
authors = ["Scott Lamb <slamb@slamb.org>"]
readme = "../README.md"
edition = "2021"
license-file = "../../LICENSE.txt"
rust-version = "1.70"
publish = false

[features]
nightly = []

[lib]
path = "lib.rs"

[dependencies]
base = { package = "moonfire-base", path = "../base" }
base64 = "0.13.0"
blake3 = "1.0.0"
byteorder = "1.0"
cstr = "0.2.5"
diff = "0.1.12"
fnv = "1.0"
futures = "0.3"
h264-reader = "0.6.0"
hashlink = "0.8.1"
itertools = "0.10.0"
libc = "0.2"
nix = "0.26.1"
num-rational = { version = "0.4.0", default-features = false, features = ["std"] }
odds = { version = "0.4.0", features = ["std-vec"] }
pretty-hex = "0.3.0"
protobuf = "3.0"
ring = "0.16.2"
rusqlite = "0.28.0"
scrypt = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#similar = "2.1.0"
smallvec = "1.0"
tempfile = "3.2.0"
time = "0.1"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.37"
ulid = "1.0.0"
url = { version = "2.1.1", features = ["serde"] }
uuid = { version = "1.1.2", features = ["serde", "std", "v4"] }

[build-dependencies]
protobuf-codegen = "3.0"
