[package]
name = "moonfire-db"
version = "0.0.0"
authors = ["Scott Lamb <slamb@slamb.org>"]
readme = "../README.md"
edition = "2021"
license-file = "../../LICENSE.txt"
rust-version = "1.81"
publish = false

[features]
nightly = []

[lib]
path = "lib.rs"

[dependencies]
base = { package = "moonfire-base", path = "../base" }
base64 = { workspace = true }
blake3 = "1.0.0"
byteorder = "1.0"
cstr = "0.2.5"
diff = "0.1.12"
futures = "0.3"
h264-reader = { workspace = true }
hashlink = "0.9.1"
itertools = { workspace = true }
jiff = { workspace = true }
libc = "0.2"
nix = { workspace = true, features = ["dir", "feature", "fs", "mman"] }
num-rational = { version = "0.4.0", default-features = false, features = ["std"] }
odds = { version = "0.4.0", features = ["std-vec"] }
pretty-hex = { workspace = true }
protobuf = "3.0"
ring = { workspace = true }
rusqlite = { workspace = true }
scrypt = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.0"
tempfile = "3.2.0"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread", "sync"] }
tracing = { workspace = true }
ulid = "1.0.0"
url = { version = "2.1.1", features = ["serde"] }
uuid = { version = "1.1.2", features = ["serde", "std", "v4"] }

[build-dependencies]
protobuf-codegen = "3.0"
