[package]
name = "moonfire-db"
version = "0.0.0"
authors = ["Scott Lamb <slamb@slamb.org>"]
readme = "../README.md"
edition = "2021"
license-file = "../../LICENSE.txt"
rust-version = "1.88"
publish = false

[features]
nightly = []

[lib]
path = "lib.rs"

[dependencies]
base = { package = "moonfire-base", path = "../base" }
base64 = { workspace = true }
blake3 = "1.0.0"
byteorder = "1.0"
bytes = { workspace = true }
diff = "0.1.12"
futures = "0.3"
h264-reader = { workspace = true }
hashlink = "0.10.0"
itertools = { workspace = true }
jiff = { workspace = true }
libc = "0.2"
nix = { workspace = true, features = ["dir", "feature", "fs", "mman"] }
num-rational = { version = "0.4.0", default-features = false, features = [
    "std",
] }
pretty-hex = { workspace = true }
protobuf = { workspace = true }
ring = { workspace = true }
rusqlite = { workspace = true }
scrypt = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.0"
tempfile = "3.2.0"
tokio = { workspace = true }
tracing = { workspace = true }
url = { version = "2.1.1", features = ["serde"] }
uuid = { workspace = true }

[build-dependencies]
protobuf-codegen = { workspace = true }
